<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivityimg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NorthernLights5"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/mainActivityTextView"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/roboto_mono"
        android:includeFontPadding="false"
        android:text="@string/my_tasks"
        android:textColor="@color/NorthernLights2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/MainActivityUsrSettingsBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MainActivityAddTskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="128dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/add_task"
...
        android:visibility="visible"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainActivityTaskRecyclerVIew"
        android:layout_width="365dp"
        android:layout_height="328dp"
        android:layout_marginTop="6dp"
        android:background="@color/NorthernLights5"
        app:layout_constraintBottom_toTopOf="@+id/MainActivityAddTskBtn"
        app:layout_constraintEnd_toEndOf="parent"
...
