<resources>
    <string name="app_name">Taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="todo">TODO</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="my_task">My Task</string>
    <string name="add_task_Activity_Add_Task">Add Task</string>
    <string name="do_something">Do Something</string>
    <string name="add_task_Btn">ADD TASK</string>
    <string name="back">Back</string>
    <string name="all_tasks_Title">All Tasks</string>
    <string name="settings">Settings</string>
    <string name="create_a_user_name">Create a User Name</string>
    <string name="save">Save</string>
    <string name="enter_username_here">Enter UserName here</string>
    <string name="user_settings">User Settings</string>
    <string name="take_out_the_trash">Take out the trash</string>
    <string name="make_my_bed">Make my bed</string>
    <string name="mow_the_lawn">Mow The Lawn</string>
    <string name="task">Task</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_aenean_viverra_finibus_laoreet_suspendisse_nec_viverra_metus_quis_tristique_mauris_nunc_quis_lacinia_dolor_cras_ac_molestie_massa_eu_ultricies_tortor_nam_ac_tincidunt_felis_vitae_aliquet_orci_morbi_ultricies_eu_tellus_quis_pharetra_sed_semper_libero_sed_blandit_condimentum_ligula_magna_accumsan_mi_in_imperdiet_mauris_lacus_ac
    <!-- TODO: Remove or change this placeholder text -->
...
