<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    tools:context=".fragments.TaskFragment">


    <TextView
        android:id="@+id/FragTextTaskTitle"
        android:layout_width="0dp"
        android:layout_height="198dp"
        android:layout_marginTop="16dp"
        android:background="@color/NorthernLights2"
        android:backgroundTint="@color/NorthernLights2"
        android:elegantTextHeight="true"
        android:fontFamily="@font/roboto_mono"
        android:includeFontPadding="false"
        android:paddingTop="25dp"
        android:text="@string/textviewTitle"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>